ASSERT in BidiResolver<Iterator, Run>::commitExplicitEmbedding makes running debug builds annoying https://bugs.webkit.org/show_bug.cgi?id=86140

Reviewed by Eric Seidel.

The correct fix here is to resolve
https://bugs.webkit.org/show_bug.cgi?id=76574, but in the mean time,
this ASSERT is annoying.

* platform/text/BidiResolver.h:
(WebCore::::commitExplicitEmbedding):


Canonical link: https://commits.webkit.org/103732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@116691 268f45cc-cd09-0410-ab3c-d52691b4dbfc